<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph2"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="my.edu.tarc.ezbike_v1.customer.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_profileFragment"
            app:destination="@id/nav_profile" />
        <action
            android:id="@+id/action_nav_home_to_nav_credibility"
            app:destination="@id/nav_credibility" />
    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="my.edu.tarc.ezbike_v1.user_management.ProfileFragment"
        android:label="@string/myAcc"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_changePswFragment"
            app:destination="@id/nav_changePsw" />
        <action
            android:id="@+id/action_nav_profile_to_credibilityFragment"
            app:destination="@id/nav_credibility" />
    </fragment>
    <fragment
        android:id="@+id/nav_changePsw"
        android:name="my.edu.tarc.ezbike_v1.user_management.ChangePswFragment"
        android:label="@string/changePsw"
        tools:layout="@layout/fragment_change_psw" />
    <fragment
        android:id="@+id/nav_credibility"
        android:name="my.edu.tarc.ezbike_v1.user_management.CredibilityFragment"
        android:label="@string/credibility"
        tools:layout="@layout/fragment_credibility" />
</navigation>