<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customer.ReturnActivity"
    style="@style/bodyCss">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="401dp"
        android:layout_height="221dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ezbikelogo" />

    <TextView
        android:id="@+id/textView"
        style="@style/scanDesc"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/take_pic_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/btnscanReturn"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/scanqr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scan_desc" />

    <TextView
        android:id="@+id/scan_desc"
        style="@style/scanDesc"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/scan_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_takePic" />

    <Button
        android:id="@+id/btn_takePic"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/take_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>