<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBrown"
    tools:context=".adminSide.ui.location.LocationSuccessFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/yahoo_logo"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSuccess"
            style="@style/yahooTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/location_add_success"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/tvSuccessMsg"
            style="@style/yahooDesc"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/location_add_success_msg"
            android:visibility="invisible"
            android:ellipsize="none"
            android:singleLine="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSuccess" />

        <TextView
            android:id="@+id/tvUpdateMsg"
            style="@style/yahooDesc"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/location_add_update_msg"
            android:visibility="invisible"
            android:ellipsize="none"
            android:singleLine="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSuccess" />

        <TextView
            android:id="@+id/tvDeleteMsg"
            style="@style/yahooDesc"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/location_add_delete_msg"
            android:visibility="invisible"
            android:ellipsize="none"
            android:singleLine="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSuccess" />

        <Button
            android:id="@+id/btnBack"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="90dp"
            android:text="@string/btnBack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/oops_logo"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFail"
            style="@style/yahooTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/location_add_fail"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <TextView
            android:id="@+id/tvFailMsg"
            style="@style/yahooDesc"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/location_add_fail_msg"
            android:visibility="invisible"
            android:ellipsize="none"
            android:singleLine="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFail" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>